[project]
name = "lossless3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "bokeh>=3.7.3",
    "box2d>=2.3.10",
    "ffmpeg>=1.4",
    "gym>=0.26.2",
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "numpy==2.0.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pygame>=2.6.1",
    "pyvirtualdisplay>=3.0",
    "scikit-learn>=1.7.0",
    "tabulate>=0.9.0",
    "tensorflow>=2.18.1",
]
